--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "babel-node scripts/server.js",
     "localtunnel": "lt --port 3000",
     "share": "npm-run-all --parallel start localtunnel",
@@ -14,10 +13,7 @@
   "author": "1ntsko",
   "license": "ISC",
   "devDependencies": {
-    "@babel/cli": "^7.16.8",
-    "@babel/core": "^7.16.7",
     "@babel/node": "^7.16.8",
-    "@babel/preset-env": "^7.16.8",
     "babel-loader": "^8.2.3",
     "css-loader": "^6.5.1",
     "express": "^4.17.2",
@@ -25,6 +21,8 @@
     "localtunnel": "^2.0.2",
     "npm-run-all": "^4.1.5",
     "style-loader": "^3.3.1",
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.5.5",
     "webpack": "^5.66.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-middleware": "^5.3.0"
